# beegroup_importing_tool

./: .gitignore  README.md  bigg_gather_datadis.yaml  bigg_gather_gemweb.yaml  bigg_gather_genercat.yaml  bigg_gather_gpg.yaml  bigg_gather_nedgia.yaml  bigg_gather_weather.yaml  bigg_harmonizer.yaml  bigg_store_dl.yaml  pyproject.toml  requirements.txt  settings.py  setup.md  setup.sh
data_dump/: buildings.ttl
docker/: Dockerfile
gather/: __main__.py
harmonizer/: __main__.py  cache.py  harmonize_cl.py
kubernetes_services/: bigg_gather_datadis.yaml  bigg_gather_gemweb.yaml  bigg_gather_genercat.yaml  bigg_gather_gpg.yaml  bigg_gather_nedgia.yaml  bigg_gather_weather.yaml  bigg_harmonizer.yaml  bigg_store_dl.yaml
load_ttl/: __main__.py
set_up/: edgar.py
set_up/DataSources/: __main__.py
set_up/DeviceAggregator/: __main__.py
set_up/Dictionaries/: __main__.py
set_up/Organizations/: __main__.py  organization_mapping.py
set_up/SimpleTariff/: __main__.py
set_up/Weather/: __main__.py
sources/: __init__.py
sources/Bulgaria/: README.md  __init__.py  constants.py
sources/BulgariaDetail/: __init__.py
sources/BulgariaSummary/: __init__.py
sources/CEEC3X/: README.md  __init__.py
sources/CO2Emissions/: __init__.py
sources/Cadastre/: __init__.py
sources/Czech/: __init__.py
sources/DEXMA/: __init__.py
sources/Datadis/: README.md  __init__.py
store/: __main__.py
translations/: AreaType_translations.xls
utils/: __init__.py  data_transformations.py  gmao.py  hbase.py  hdfs.py  kafka.py  neo4j.py  nomenclature.py  security.py  utils.py
(+171 files in other folders)
